--- a/index.html
+++ b/index.html
@@ -2,36 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Agrinho 2025</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Agrinho 2025 - Conexão Campo e Cidade</h1>
-
-    <div id="escolha">
-      <button onclick="escolher('agricultor')">Sou Agricultor</button>
-      <button onclick="escolher('consumidor')">Sou Consumidor</button>
-    </div>
-
-    <div id="form-agricultor" class="form hidden">
-      <h2>Cadastro de Produto</h2>
-      <input type="text" id="nome" placeholder="Nome">
-      <input type="text" id="cidade" placeholder="Cidade">
-      <input type="text" id="produto" placeholder="Produto">
-      <input type="number" id="valor" placeholder="Valor">
-      <input type="text" id="contato" placeholder="Contato">
-      <button onclick="cadastrarProduto()">Cadastrar Produto</button>
-    </div>
-
-    <div id="form-consumidor" class="form hidden">
-      <h2>Produtos Disponíveis</h2>
-      <input type="text" id="filtro" placeholder="Buscar por cidade ou produto..." oninput="filtrarProdutos()">
-      <div id="lista-produtos"></div>
-    </div>
+  <div class="container" id="app">
+    <!-- O conteúdo será gerado pelo script.js -->
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
