--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container" id="app">
-    <!-- O conteúdo será gerado pelo script.js -->
+    <!-- Conteúdo gerado por script.js -->
   </div>
   <script src="script.js"></script>
 </body>
